fixing spacing a2

--- a/Projects.css
+++ b/Projects.css
@@ -193,6 +193,8 @@ h4 {
     width: 100%;
     height: 43vw;
     position: relative;
+    border: 2px solid black;
+    margin-top: 10vw;
 }
 
 .part_text {
